mts-failure-injection/mts-outage-mesh.yaml
#################################################################################
# Istio virtual service configuration with injected outages for mesh traffic 
# to dishes service 
#################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mts-dishes-routing
spec:
  hosts:
  - mts-dishes.default.svc.cluster.local
  http:
  - match: 
    - sourceLabels:
        app: mts-booking-order
      headers:
        baggage-username:
          exact: fault.injection
    fault:
      abort:
        httpStatus: 500
        percent: 100          
    route:
    - destination:
        host: mts-dishes.default.svc.cluster.local
        port:
          number: 80
  - match:
    - sourceLabels:
        app: mts-booking-order
    route:
    - destination:
        host: mts-dishes.default.svc.cluster.local
        port:
          number: 80
